--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ eureka:
     instance-info-replication-interval-seconds: 10
     service-url:      defaultZone: http://localhost:8761/eureka
       
-
+encrypt:  key: fgh
       
       
 #       <Property>                                             : <Default>   :           <Description>
