--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
   port: 8888
  
 spring:
+  application:
+    name: bm-config-service
   profiles:
     active: native
   cloud:
@@ -12,7 +14,7 @@ spring:
       server:
         native:
           search-locations:
-          - classpath:/configuration  application:    name: bm-config-service
+          - classpath:/configuration  
  
 eureka: 
   client:
