ITBM-develop - bm-gateway-service-dev.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
       server:
         native:
           search-locations:
-          - classpath:/configuration  
+            - classpath:/configuration
+            - classpath:/configuration/bm-gateway-service  
  
 eureka: 
   client:
